Se agregan controladores y modelos de periodo y tipo_periodo
