# models/tipo_periodo.go
@@ -5,52 +5,55 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
+	"time"
 
 	"github.com/astaxie/beego/orm"
 )
 
-type PeriodoAcademico struct {
-	Id                int     `orm:"column(id);pk;auto"`
-	Nombre            string  `orm:"column(nombre)"`
-	Descripcion       string  `orm:"column(descripcion);null"`
-	CodigoAbreviacion string  `orm:"column(codigo_abreviacion);null"`
-	Activo            bool    `orm:"column(activo)"`
-	NumeroOrden       float64 `orm:"column(numero_orden);null"`
+type TipoPeriodo struct {
+	Id                int       `orm:"column(id);pk;auto"`
+	Nombre            string    `orm:"column(nombre)"`
+	Descripcion       string    `orm:"column(descripcion);null"`
+	CodigoAbreviacion string    `orm:"column(codigo_abreviacion);null"`
+	Activo            bool      `orm:"column(activo)"`
+	NumeroOrden       float64   `orm:"column(numero_orden);null"`
+	FechaCreacion     time.Time `orm:"column(fecha_creacion);type(timestamp without time zone)"`
+	FechaModificacion time.Time `orm:"column(fecha_modificacion);type(timestamp without time zone)"`
 }
 
-func (t *PeriodoAcademico) TableName() string {
-	return "periodo_academico"
+func (t *TipoPeriodo) TableName() string {
+	return "tipo_periodo"
 }
 
 func init() {
-	orm.RegisterModel(new(PeriodoAcademico))
+	orm.RegisterModel(new(TipoPeriodo))
 }
 
-// AddPeriodoAcademico insert a new PeriodoAcademico into database and returns
+// AddTipoPeriodo insert a new TipoPeriodo into database and returns
 // last inserted Id on success.
-func AddPeriodoAcademico(m *PeriodoAcademico) (id int64, err error) {
+func AddTipoPeriodo(m *TipoPeriodo) (id int64, err error) {
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
 }
 
-// GetPeriodoAcademicoById retrieves PeriodoAcademico by Id. Returns error if
+// GetTipoPeriodoById retrieves TipoPeriodo by Id. Returns error if
 // Id doesn't exist
-func GetPeriodoAcademicoById(id int) (v *PeriodoAcademico, err error) {
+func GetTipoPeriodoById(id int) (v *TipoPeriodo, err error) {
 	o := orm.NewOrm()
-	v = &PeriodoAcademico{Id: id}
+	v = &TipoPeriodo{Id: id}
 	if err = o.Read(v); err == nil {
 		return v, nil
 	}
 	return nil, err
 }
 
-// GetAllPeriodoAcademico retrieves all PeriodoAcademico matches certain condition. Returns empty list if
+// GetAllTipoPeriodo retrieves all TipoPeriodo matches certain condition. Returns empty list if
 // no records exist
-func GetAllPeriodoAcademico(query map[string]string, fields []string, sortby []string, order []string,
+func GetAllTipoPeriodo(query map[string]string, fields []string, sortby []string, order []string,
 	offset int64, limit int64) (ml []interface{}, err error) {
 	o := orm.NewOrm()
-	qs := o.QueryTable(new(PeriodoAcademico)).RelatedSel()
+	qs := o.QueryTable(new(TipoPeriodo)).RelatedSel()
 	// query k=v
 	for k, v := range query {
 		// rewrite dot-notation to Object__Attribute
@@ -100,7 +103,7 @@ func GetAllPeriodoAcademico(query map[string]string, fields []string, sortby []s
 		}
 	}
 
-	var l []PeriodoAcademico
+	var l []TipoPeriodo
 	qs = qs.OrderBy(sortFields...)
 	if _, err = qs.Limit(limit, offset).All(&l, fields...); err == nil {
 		if len(fields) == 0 {
@@ -123,11 +126,11 @@ func GetAllPeriodoAcademico(query map[string]string, fields []string, sortby []s
 	return nil, err
 }
 
-// UpdatePeriodoAcademico updates PeriodoAcademico by Id and returns error if
+// UpdateTipoPeriodo updates TipoPeriodo by Id and returns error if
 // the record to be updated doesn't exist
-func UpdatePeriodoAcademicoById(m *PeriodoAcademico) (err error) {
+func UpdateTipoPeriodoById(m *TipoPeriodo) (err error) {
 	o := orm.NewOrm()
-	v := PeriodoAcademico{Id: m.Id}
+	v := TipoPeriodo{Id: m.Id}
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
@@ -138,15 +141,15 @@ func UpdatePeriodoAcademicoById(m *PeriodoAcademico) (err error) {
 	return
 }
 
-// DeletePeriodoAcademico deletes PeriodoAcademico by Id and returns error if
+// DeleteTipoPeriodo deletes TipoPeriodo by Id and returns error if
 // the record to be deleted doesn't exist
-func DeletePeriodoAcademico(id int) (err error) {
+func DeleteTipoPeriodo(id int) (err error) {
 	o := orm.NewOrm()
-	v := PeriodoAcademico{Id: id}
+	v := TipoPeriodo{Id: id}
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
-		if num, err = o.Delete(&PeriodoAcademico{Id: id}); err == nil {
+		if num, err = o.Delete(&TipoPeriodo{Id: id}); err == nil {
 			fmt.Println("Number of records deleted in database:", num)
 		}
 	}
