# swagger/swagger.yml
@@ -241,12 +241,12 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
-  /periodo_academico/:
+  /periodo/:
     get:
       tags:
-      - periodo_academico
-      description: get PeriodoAcademico
-      operationId: PeriodoAcademicoController.Get All
+      - periodo
+      description: get Periodo
+      operationId: PeriodoController.Get All
       parameters:
       - in: query
         name: query
@@ -277,32 +277,32 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.PeriodoAcademico'
+            $ref: '#/definitions/models.Periodo'
         "404":
           description: not found resource
     post:
       tags:
-      - periodo_academico
-      description: create PeriodoAcademico
-      operationId: PeriodoAcademicoController.Post
+      - periodo
+      description: create Periodo
+      operationId: PeriodoController.Post
       parameters:
       - in: body
         name: body
-        description: body for PeriodoAcademico content
+        description: body for Periodo content
         required: true
         schema:
-          $ref: '#/definitions/models.PeriodoAcademico'
+          $ref: '#/definitions/models.Periodo'
       responses:
         "201":
-          description: '{int} models.PeriodoAcademico'
+          description: '{int} models.Periodo'
         "400":
           description: the request contains incorrect syntax
-  /periodo_academico/{id}:
+  /periodo/{id}:
     get:
       tags:
-      - periodo_academico
-      description: get PeriodoAcademico by id
-      operationId: PeriodoAcademicoController.Get One
+      - periodo
+      description: get Periodo by id
+      operationId: PeriodoController.Get One
       parameters:
       - in: path
         name: id
@@ -313,14 +313,14 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.PeriodoAcademico'
+            $ref: '#/definitions/models.Periodo'
         "404":
           description: not found resource
     put:
       tags:
-      - periodo_academico
-      description: update the PeriodoAcademico
-      operationId: PeriodoAcademicoController.Put
+      - periodo
+      description: update the Periodo
+      operationId: PeriodoController.Put
       parameters:
       - in: path
         name: id
@@ -329,22 +329,22 @@ paths:
         type: string
       - in: body
         name: body
-        description: body for PeriodoAcademico content
+        description: body for Periodo content
         required: true
         schema:
-          $ref: '#/definitions/models.PeriodoAcademico'
+          $ref: '#/definitions/models.Periodo'
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.PeriodoAcademico'
+            $ref: '#/definitions/models.Periodo'
         "400":
           description: the request contains incorrect syntax
     delete:
       tags:
-      - periodo_academico
-      description: delete the PeriodoAcademico
-      operationId: PeriodoAcademicoController.Delete
+      - periodo
+      description: delete the Periodo
+      operationId: PeriodoController.Delete
       parameters:
       - in: path
         name: id
@@ -471,6 +471,121 @@ paths:
           description: '{string} delete success!'
         "403":
           description: id is empty
+  /tipo_periodo/:
+    get:
+      tags:
+      - tipo_periodo
+      description: get TipoPeriodo
+      operationId: TipoPeriodoController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TipoPeriodo'
+        "404":
+          description: not found resource
+    post:
+      tags:
+      - tipo_periodo
+      description: create TipoPeriodo
+      operationId: TipoPeriodoController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for TipoPeriodo content
+        required: true
+        schema:
+          $ref: '#/definitions/models.TipoPeriodo'
+      responses:
+        "201":
+          description: '{int} models.TipoPeriodo'
+        "400":
+          description: the request contains incorrect syntax
+  /tipo_periodo/{id}:
+    get:
+      tags:
+      - tipo_periodo
+      description: get TipoPeriodo by id
+      operationId: TipoPeriodoController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TipoPeriodo'
+        "404":
+          description: not found resource
+    put:
+      tags:
+      - tipo_periodo
+      description: update the TipoPeriodo
+      operationId: TipoPeriodoController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for TipoPeriodo content
+        required: true
+        schema:
+          $ref: '#/definitions/models.TipoPeriodo'
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TipoPeriodo'
+        "400":
+          description: the request contains incorrect syntax
+    delete:
+      tags:
+      - tipo_periodo
+      description: delete the TipoPeriodo
+      operationId: TipoPeriodoController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "404":
+          description: not found resource
   /unidad_tiempo/:
     get:
       tags:
@@ -625,8 +740,34 @@ definitions:
       NumeroOrden:
         type: number
         format: double
-  models.PeriodoAcademico:
-    title: PeriodoAcademico
+  models.Periodo:
+    title: Periodo
+    type: object
+    properties:
+      Activo:
+        type: boolean
+      CodigoAbreviacion:
+        type: string
+      Descripcion:
+        type: string
+      FechaCreacion:
+        type: string
+        format: datetime
+      FechaModificacion:
+        type: string
+        format: datetime
+      Id:
+        type: integer
+        format: int64
+      Nombre:
+        type: string
+      NumeroOrden:
+        type: number
+        format: double
+      TipoPeriodo:
+        $ref: '#/definitions/models.TipoPeriodo'
+  models.TipoDatoAdicional:
+    title: TipoDatoAdicional
     type: object
     properties:
       Activo:
@@ -643,8 +784,8 @@ definitions:
       NumeroOrden:
         type: number
         format: double
-  models.TipoDatoAdicional:
-    title: TipoDatoAdicional
+  models.TipoPeriodo:
+    title: TipoPeriodo
     type: object
     properties:
       Activo:
@@ -653,6 +794,12 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaCreacion:
+        type: string
+        format: datetime
+      FechaModificacion:
+        type: string
+        format: datetime
       Id:
         type: integer
         format: int64
@@ -692,6 +839,9 @@ tags:
 - name: nucleo_basico_conocimiento
   description: |
     oprations for NucleoBasicoConocimiento
-- name: periodo_academico
+- name: periodo
   description: |
-    PeriodoAcademicoController operations for PeriodoAcademico
+    PeriodoController operations for Periodo
+- name: tipo_periodo
+  description: |
+    TipoPeriodoController operations for TipoPeriodo
